@@ -239,9 +239,10 @@ typedef enum {
   DC1394_TRIGGER_SOURCE_1,
   DC1394_TRIGGER_SOURCE_2,
   DC1394_TRIGGER_SOURCE_3,
+  DC1394_TRIGGER_SOURCE_SOFTWARE,
 } dc1394trigger_source_t;
 #define DC1394_TRIGGER_SOURCE_MIN      DC1394_TRIGGER_SOURCE_0
-#define DC1394_TRIGGER_SOURCE_MAX      DC1394_TRIGGER_SOURCE_3
+#define DC1394_TRIGGER_SOURCE_MAX      DC1394_TRIGGER_SOURCE_SOFTWARE
 #define DC1394_TRIGGER_SOURCE_NUM     (DC1394_TRIGGER_SOURCE_MAX - DC1394_TRIGGER_SOURCE_MIN + 1)
 
 /* Enumeration of power classes */
